public/style.css
:root {
	--theme-rhythm: 4em;
	--demo-secondary-minor: #fff;
}
@media (prefers-color-scheme: dark) {
	:root {
		--demo-secondary-minor: #222;
		--bw-shadow-hsl: var(--demo-shadow-hsl);
	}
}

/* Overrides */
.demo-main {
	border-color: transparent;
	padding: 0;
}

main img {
	background-image: url(/demo-checkerboard.svg);
	background-repeat: repeat;
}
figure {
	margin: 0;
}
figcaption {
	padding: .5em 1em .75em;
}
section {
	padding-bottom: var(--theme-rhythm);
	margin: var(--theme-rhythm) auto;
	border-bottom: 1px solid #c2c2c2;
	max-width: 50em;
}
section:first-of-type {
	margin-top: 0;
}
section:last-of-type {
	border-bottom: none;
}
table {
	margin-top: 2em;
}

/* Demo styles */
.demo-better {
	color: #00882D;
	font-weight: bold;
}
.demo-worse {
	color: #CB000F;
	font-weight: bold;
}
tr.loadedsrc {
	background-color: #eaeaea;
}
tr.currentsrc {
	outline: 2px solid;
}

